--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,198 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+alembic==1.12.0
+annotated-types==0.5.0
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
+arrow==1.2.3
+asteroid-filterbanks==0.4.0
+asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+audioread==3.0.0
+backcall==0.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.2
+blessed==1.20.0
 blinker==1.6.2
 boto3==1.28.40
 botocore==1.31.40
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
 click==8.1.7
+cmaes==0.10.0
+cmake==3.27.4.1
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.7.0
+comm==0.1.4
+contourpy==1.1.0
+croniter==1.4.1
+cycler==0.11.0
+datasets==2.14.5
+dateutils==0.6.12
+debugpy==1.8.0
+decorator==5.1.1
+deepdiff==6.5.0
+dill==0.3.7
 dnspython==2.4.2
+docopt==0.6.2
+einops==0.6.1
+evaluate==0.4.0
+exceptiongroup==1.1.3
+executing==1.2.0
+fastapi==0.103.1
+ffmpeg==1.4
+filelock==3.12.3
 Flask==2.3.3
 Flask-JWT-Extended==4.5.2
+flatbuffers==23.5.26
+fonttools==4.42.1
+frozenlist==1.4.0
+fsspec==2023.6.0
+greenlet==2.0.2
+h11==0.14.0
+huggingface-hub==0.17.1
+humanfriendly==10.0
+HyperPyYAML==1.2.1
+idna==3.4
+inquirer==3.1.3
+ipykernel==6.25.2
+ipython==8.15.0
 itsdangerous==2.1.2
+jedi==0.19.0
 Jinja2==3.1.2
 jmespath==1.0.1
+joblib==1.3.2
+julius==0.2.7
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+kiwisolver==1.4.5
+lazy_loader==0.3
+librosa==0.10.1
+lightning==2.0.8
+lightning-cloud==0.5.37
+lightning-utilities==0.9.0
+lit==16.0.6
+llvmlite==0.40.1
+Mako==1.2.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mpmath==1.3.0
+msgpack==1.0.5
+multidict==6.0.4
+multiprocess==0.70.15
+nest-asyncio==1.5.7
+networkx==3.1
+numba==0.57.1
+numpy==1.24.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+omegaconf==2.3.0
+onnx==1.14.1
+onnxruntime==1.15.1
+onnxruntime-gpu==1.15.1
+optimum @ git+https://github.com/huggingface/optimum.git@c63138778c0c08b96ee49ea35f6346ff42a21437
+optuna==3.3.0
+ordered-set==4.1.0
+packaging==23.1
+pandas==2.1.0
+parso==0.8.3
 passlib==1.7.4
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+platformdirs==3.10.0
+pooch==1.7.0
+primePy==1.3
+prompt-toolkit==3.0.39
+protobuf==4.24.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyannote.audio==2.1.1
+pyannote.core==5.0.0
+pyannote.database==5.0.1
+pyannote.metrics==3.2.1
+pyannote.pipeline==2.3
+pyarrow==13.0.0
+pycparser==2.21
+pydantic==2.1.1
+pydantic_core==2.4.0
+Pygments==2.16.1
 PyJWT==2.8.0
 pymongo==4.5.0
+pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-editor==1.0.4
+python-multipart==0.0.6
+pytorch-lightning==2.0.8
+pytorch-metric-learning==2.3.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+readchar==4.0.5
+regex==2023.8.8
+requests==2.31.0
+responses==0.18.0
+rich==13.5.2
+ruamel.yaml==0.17.28
+ruamel.yaml.clib==0.2.7
 s3transfer==0.6.2
+safetensors==0.3.3
+scikit-learn==1.3.0
+scipy==1.11.2
+semver==3.0.1
+sentencepiece==0.1.99
+shellingham==1.5.3
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soundfile==0.12.1
+soupsieve==2.5
+soxr==0.3.6
+speechbrain==0.5.15
+SQLAlchemy==2.0.20
+stack-data==0.6.2
+starlette==0.27.0
+starsessions==1.3.0
+sympy==1.12
+tabulate==0.9.0
+tensorboardX==2.6.2.2
+threadpoolctl==3.2.0
+tokenizers==0.13.3
+torch==2.0.1
+torch-audiomentations==0.11.0
+torch-pitch-shift==1.2.4
+torchaudio==2.0.2
+torchmetrics==1.1.2
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.9.0
+transformers==4.33.1
+triton==2.0.0
+typer==0.9.0
+typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==1.26.16
+uvicorn==0.23.2
+wcwidth==0.2.6
+websocket-client==1.6.3
+websockets==11.0.3
 Werkzeug==2.3.7
+xxhash==3.3.0
+yarl==1.9.2
