--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.23.0
 aiohttp==3.8.5
 aiosignal==1.3.1
 alembic==1.12.0
@@ -46,6 +47,7 @@ fastapi==0.103.1
 ffmpeg==1.4
 filelock==3.12.3
 Flask==2.3.3
+Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.2
 flatbuffers==23.5.26
 fonttools==4.42.1
@@ -161,6 +163,7 @@ semver==3.0.1
 sentencepiece==0.1.99
 shellingham==1.5.3
 six==1.16.0
+sklearn==0.0.post9
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soundfile==0.12.1
