--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,140 @@
+accelerate
+aiohttp
+aiosignal
+alembic
+annotated-types
+antlr4-python3-runtime
+anyio
+arrow
+asteroid-filterbanks
+asttokens
+async-timeout
+attrs
+audioread
+backcall
+backoff
+beautifulsoup4
+blessed
+blinker
+boto3
+botocore
+certifi
+cffi
+charset-normalizer
+click
+cmaes
+cmake
+colorama
+coloredlogs
+colorlog
+comm
+contourpy
+croniter
+cycler
+datasets
+dateutils
+debugpy
+decorator
+deepdiff
+dill
+dnspython
+docopt
+einops
+evaluate
+exceptiongroup
+executing
+fastapi
+ffmpeg
+filelock
+Flask
+Flask-Cors
+Flask-JWT-Extended
+flatbuffers
+fonttools
+frozenlist
+fsspec
+greenlet
+h11
+huggingface-hub
+humanfriendly
+HyperPyYAML
+idna
+inquirer
+ipykernel
+ipython
+itsdangerous
+jedi
+Jinja2
+jmespath
+joblib
+julius
+jupyter_client
+jupyter_core
+kiwisolver
+lazy_loader
+librosa
+lightning
+lightning-cloud
+lightning-utilities
+lit
+llvmlite
+Mako
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+mpmath
+msgpack
+multidict
+multiprocess
+nest-asyncio
+networkx
+numba
+numpy
+nvidia-cublas-cu11
+nvidia-cuda-cupti-cu11
+nvidia-cuda-nvrtc-cu11
+nvidia-cuda-runtime-cu11
+nvidia-cudnn-cu11
+nvidia-cufft-cu11
+nvidia-curand-cu11
+nvidia-cusolver-cu11
+nvidia-cusparse-cu11
+nvidia-nccl-cu11
+nvidia-nvtx-cu11
+omegaconf
+onnx
+onnxruntime
+onnxruntime-gpu
+optimum @ git+https://github.com/huggingface/optimum.git
+optuna
+ordered-set
+packaging
+pandas
+parso
+passlib
+pexpect
+pickleshare
+Pillow
+platformdirs
+pooch
+primePy
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+pyannote.audio
+pyannote.core
+pyannote.database
+pyannote.metrics
+pyannote.pipeline
+pyarrow
+pycparser
+pydantic
+pydantic_core
+pydub
 Pygments==2.16.1
 PyJWT==2.8.0
 pymongo==4.5.0
